# ddd-rust-sample

./: Cargo.toml
src/: main.rs  mock_api.rs
src/controller/: user_handler.rs
src/domain/: operation.rs  user.rs
src/repository/: user_repository.rs
src/services/: service_user.rs
src/usecase/: register_user.rs
