[package]
name = "polling-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = "0.8.3"
axum-server = "0.7.2"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "mock"
path = "src/mock_api.rs"

